# pantograph

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.override.yml  docker-compose.yml  models.py  permissions.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  email_preview.py  models.py  permissions.py  security.py  utils.py
app/blueprints/: admin.py  auth.py  main.py  teams.py  user.py
app/static/: style.css
app/static/js/: api-client.js
app/templates/: _footer.html  _head.html  _navbar.html  _team_status_alerts.html  _waiver.html  admin.html  admin_email_templates.html  base.html  confirm_account_creation.html  create_team.html  gallery.html  index.html  login.html  participant_registration.html  payment.html  privacy.html  team_members.html  terms.html
app/templates/emails/: _captain_responsibilities.html  captain_transfer.html  email_base.html  member_joined.html  new_members_digest.html  team_approval.html  team_creation.html
data/: lrr_1_line.geojson  microsoft-identity-assocation.json
static/: style.css
static/js/: api-client.js
templates/: _footer.html  _head.html  _navbar.html  admin.html  create_team.html  gallery.html  index.html  login.html  participant_registration.html  team_members.html  team_page.html
